@@ -34,13 +34,17 @@ dependencies {
             [group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'],
             [group: 'org.projectlombok', name: 'lombok', version: '1.16.6'],
     )
+
+    testCompile(
+            [group: 'junit', name: 'junit', version: '4.12']
+    )
 }
 
 sourceSets {
     main {
         resources.srcDirs = [
-            "src/main/resources",
             "src/main/java",
+            "src/main/resources"
         ]
     }
 }
@@ -65,6 +69,26 @@ jfxmobile {
 flyway {
     url = null
     locations = null
+}
+
+/**
+ * Tests
+ */
+test {
+    testLogging.showStandardStreams = true
+
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
+    }
 }
 
 /**
